# PSBD_Backdoor-Detection

./: .gitignore  README.md  pyproject.toml  requirements-colab.txt  requirements.txt
configs/: default.yaml
reports/: cpu_psbd_eval.json
scripts/: run_demo.sh
src/psbd_nlp/: __init__.py  cli.py  config.py  cpu_demo.py  data.py  detector.py  eval.py  movielens.py  real_data.py  scoring.py  train.py
streamlit_app/: app.py
tests/: test_cpu_demo.py  test_data.py  test_scoring.py
